Add --enable-preview flag to use Java Record